--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scorenxt</title>
+    <title>Prepnxt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg navbar-light nav-sxt" id="nav-screnxt">
             <div class="container-fluid" id="sx-nav-container">
                 <a class="navbar-brand" href="#">
-                    <img id="logo-scale" src="./public/images/scoreNXTlogo.png" alt="Scorenxt">
+                    <img id="logo-scale" src="./public/images/scoreNXTlogo.png" alt="prepnxt">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu"
                     aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
